fix some LakeFS test issues 2507041019